# GreekQuiz

./: .gitignore  .gitmodules  CMakeLists.txt  TODO.txt  gkqz.css  index.html  index.js  license.sh  minshell.html
dbs/: dbs.sqlite3  generator.py  newmorphs.sqlite3  nextgen.cpp  nextgen.py
libs/unibetacode/: ub_utf8.c
site/: help.html  index.js
src/: App.cpp  App.h  Betacode.cpp  Betacode.h  Conj.cpp  Conj.h  DbManager.cpp  DbManager.h  Label.h  QuizItem.cpp  QuizItem.h  QuizRevItem.cpp  QuizRevItem.h  TODO.txt  Utils.h  main.cpp
unibetacode/: ub_beta2greek.c  ub_beta2greek.h  ub_greek2beta.c  ub_greek2beta.h
